# rust-by-example-snippets

./: .gitpod.yml  Cargo.toml  README.md
.devcontainer/: devcontainer.json
1. Hello World/: 1. Hello World.rs  1.1. Comments.rs
1. Hello World/1.2. Formatted Print/: 1.2. Formatted Print.rs  1.2.1. Debug.rs  1.2.2. Display.rs  1.2.2.1. Testcase - List.rs  1.2.3. Formatting.rs
2. Primitives/: 2. Primitives.rs  2.1. Literals and Operators.rs  2.2. Tuples.rs  2.3. Arrays and Slices.rs
3. Custom Types/: 3. Custom Types.rs  3.1. Structures.rs  3.3. Constants.rs
3. Custom Types/3.2. Enums/: 3.2. Enums.rs  3.2.1. Use.rs  3.2.2. C-like.rs  3.2.3. Testcase - Linked List.rs
4. Variable Bindings/: 4. Variable Bindings.rs  4.1. Mutability.rs  4.2. Scope and Shadowing.rs  4.3. Declare First.rs  4.4. Freezing.rs
5. Types/: 5.1. Casting.rs  5.2. Literals.rs  5.3. Inference.rs  5.4. Aliasing.rs
6. Conversion/: 6.1. From and Into.rs  6.2. TryFrom and TryInto.rs  6.3. To and From Strings.rs
7. Expressions/: 7. Expressions.rs
8. Flow of Control/: 8.1. if_else.rs  8.4. for and range.rs  8.6. if let.rs  8.7. while let.rs
8. Flow of Control/8.2. loop/: 8.2. loop.rs  8.2.1. Nesting and labels.rs  8.2.2. Returning from loops.rs
8. Flow of Control/8.5. match/: 8.5. match.rs  8.5.2. Guards.rs  8.5.3. Binding.rs
8. Flow of Control/8.5. match/8.5.1. Destructuring/: 8.5.1.1. tuples.rs  8.5.1.2. arrays_slices.rs  8.5.1.3. enums.rs  8.5.1.4. pointers_ref.rs  8.5.1.5. structs.rs
src/: main.rs
