[package]
name = "rust-by-example-snippets"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "1"
path = "./1. Hello World/1. Hello World.rs"

[[bin]]
name = "1_1"
path = "./1. Hello World/1.1. Comments.rs"

[[bin]]
name = "1_2"
path = "./1. Hello World/1.2. Formatted Print/1.2. Formatted Print.rs"

[[bin]]
name = "1_2_1"
path = "./1. Hello World/1.2. Formatted Print/1.2.1. Debug.rs"

[[bin]]
name = "1_2_2"
path = "./1. Hello World/1.2. Formatted Print/1.2.2. Display.rs"

[[bin]]
name = "1_2_2_1"
path = "./1. Hello World/1.2. Formatted Print/1.2.2.1. Testcase - List.rs"

[[bin]]
name = "1_2_3"
path = "./1. Hello World/1.2. Formatted Print/1.2.3. Formatting.rs"

[[bin]]
name = "2"
path = "./2. Primitives/2. Primitives.rs"

[[bin]]
name = "2_1"
path = "./2. Primitives/2.1. Literals and Operators.rs"

[[bin]]
name = "2_2"
path = "./2. Primitives/2.2. Tuples.rs"

[[bin]]
name = "2_3"
path = "./2. Primitives/2.3. Arrays and Slices.rs"

[[bin]]
name = "3"
path = "./3. Custom Types/3. Custom Types.rs"

[[bin]]
name = "3_1"
path = "./3. Custom Types/3.1. Structures.rs"

[[bin]]
name = "3_2"
path = "./3. Custom Types/3.2. Enums/3.2. Enums.rs"

[[bin]]
name = "3_2_1"
path = "./3. Custom Types/3.2. Enums/3.2.1. Use.rs"

[[bin]]
name = "3_2_2"
path = "./3. Custom Types/3.2. Enums/3.2.2. C-like.rs"

[[bin]]
name = "3_2_3"
path = "./3. Custom Types/3.2. Enums/3.2.3. Testcase - Linked List.rs"

[[bin]]
name = "3_3"
path = "./3. Custom Types/3.3. Constants.rs"
