[package]
name = "rust-by-example-snippets"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "1"
path = "./1. Hello World/1. Hello World.rs"

[[bin]]
name = "1_1"
path = "./1. Hello World/1.1. Comments.rs"

[[bin]]
name = "1_2"
path = "./1. Hello World/1.2. Formatted Print/1.2. Formatted Print.rs"

[[bin]]
name = "1_2_1"
path = "./1. Hello World/1.2. Formatted Print/1.2.1. Debug.rs"

[[bin]]
name = "1_2_2"
path = "./1. Hello World/1.2. Formatted Print/1.2.2. Display.rs"

[[bin]]
name = "1_2_2_1"
path = "./1. Hello World/1.2. Formatted Print/1.2.2.1. Testcase - List.rs"

[[bin]]
name = "1_2_3"
path = "./1. Hello World/1.2. Formatted Print/1.2.3. Formatting.rs"

[[bin]]
name = "4"
path = "./4. Variable Bindings/4. Variable Bindings.rs"

[[bin]]
name = "4_1"
path = "./4. Variable Bindings/4.1. Mutability.rs"

[[bin]]
name = "4_2"
path = "./4. Variable Bindings/4.2. Scope and Shadowing.rs"

[[bin]]
name = "4_3"
path = "./4. Variable Bindings/4.3. Declare First.rs"

[[bin]]
name = "4_4"
path = "./4. Variable Bindings/4.4. Freezing.rs"

[[bin]]
name = "5_1"
path = "./5. Types/5.1. Casting.rs"

[[bin]]
name = "5_2"
path = "./5. Types/5.2. Literals.rs"

[[bin]]
name = "5_3"
path = "./5. Types/5.3. Inference.rs"

[[bin]]
name = "5_4"
path = "./5. Types/5.4. Aliasing.rs"

[[bin]]
name = "6_1"
path = "./6. Conversion/6.1. From and Into.rs"

[[bin]]
name = "6_2"
path = "./6. Conversion/6.2. TryFrom and TryInto.rs"

[[bin]]
name = "6_3"
path = "./6. Conversion/6.3. To and From Strings.rs"

[[bin]]
name = "7"
path = "./7. Expressions/7. Expressions.rs"

[[bin]]
name = "8_1"
path = "./8. Flow of Control/8.1. if_else.rs"

[[bin]]
name = "8_2"
path = "./8. Flow of Control/8.2. loop/8.2. loop.rs"

[[bin]]
name = "8_2_1"
path = "./8. Flow of Control/8.2. loop/8.2.1. Nesting and labels.rs"

[[bin]]
name = "8_2_2"
path = "./8. Flow of Control/8.2. loop/8.2.2. Returning from loops.rs"

[[bin]]
name = "8_3"
path = "./8. Flow of Control/8.3. while.rs"

[[bin]]
name = "8_4"
path = "./8. Flow of Control/8.4. for and range.rs"

[[bin]]
name = "8_5"
path = "./8. Flow of Control/8.5. match/8.5. match.rs"

[[bin]]
name = "8_5_1_1"
path = "./8. Flow of Control/8.5. match/8.5.1. Destructuring/8.5.1.1. tuples.rs"

[[bin]]
name = "8_5_1_2"
path = "./8. Flow of Control/8.5. match/8.5.1. Destructuring/8.5.1.2. arrays_slices.rs"

[[bin]]
name = "8_5_1_3"
path = "./8. Flow of Control/8.5. match/8.5.1. Destructuring/8.5.1.3. enums.rs"

[[bin]]
name = "8_5_1_4"
path = "./8. Flow of Control/8.5. match/8.5.1. Destructuring/8.5.1.4. pointers_ref.rs"

[[bin]]
name = "8_5_1_5"
path = "./8. Flow of Control/8.5. match/8.5.1. Destructuring/8.5.1.5. structs.rs"

[[bin]]
name = "8_5_2"
path = "./8. Flow of Control/8.5. match/8.5.2. Guards.rs"

[[bin]]
name = "8_5_3"
path = "./8. Flow of Control/8.5. match/8.5.3. Binding.rs"

[[bin]]
name = "8_6"
path = "./8. Flow of Control/8.6. if let.rs"

[[bin]]
name = "8_7"
path = "./8. Flow of Control/8.7. while let.rs"
name = "2"
path = "./2. Primitives/2. Primitives.rs"

[[bin]]
name = "2_1"
path = "./2. Primitives/2.1. Literals and Operators.rs"

[[bin]]
name = "2_2"
path = "./2. Primitives/2.2. Tuples.rs"

[[bin]]
name = "2_3"
path = "./2. Primitives/2.3. Arrays and Slices.rs"

[[bin]]
name = "3"
path = "./3. Custom Types/3. Custom Types.rs"

[[bin]]
name = "3_1"
path = "./3. Custom Types/3.1. Structures.rs"

[[bin]]
name = "3_2"
path = "./3. Custom Types/3.2. Enums/3.2. Enums.rs"

[[bin]]
name = "3_2_1"
path = "./3. Custom Types/3.2. Enums/3.2.1. Use.rs"

[[bin]]
name = "3_2_2"
path = "./3. Custom Types/3.2. Enums/3.2.2. C-like.rs"

[[bin]]
name = "3_2_3"
path = "./3. Custom Types/3.2. Enums/3.2.3. Testcase - Linked List.rs"

[[bin]]
name = "3_3"
path = "./3. Custom Types/3.3. Constants.rs"
